--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">insets-examples</string>
+    <string name="compose_samples">Compose samples</string>
 </resources>
