--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">insets-examples</string>
     <string name="compose_samples">Compose samples</string>
     <string name="insets_sample_list">Insets list sample</string>
+    <string name="insets_sample_keyboard">Insets keyboard sample</string>
 </resources>
